@@ -1,15 +1,27 @@
 package com.google.adk.a2a.converters;
 
+import com.google.adk.agents.InvocationContext;
 import com.google.adk.events.Event;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Iterables;
 import com.google.genai.types.Content;
+import io.a2a.client.ClientEvent;
+import io.a2a.client.MessageEvent;
+import io.a2a.client.TaskEvent;
+import io.a2a.client.TaskUpdateEvent;
 import io.a2a.spec.EventKind;
 import io.a2a.spec.Message;
-import io.a2a.spec.Message.Builder;
 import io.a2a.spec.SendMessageResponse;
 import io.a2a.spec.Task;
+import io.a2a.spec.TaskArtifactUpdateEvent;
+import io.a2a.spec.TaskState;
+import io.a2a.spec.TaskStatusUpdateEvent;
+import io.a2a.spec.TextPart;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 import org.jspecify.annotations.Nullable;
@@ -24,8 +36,11 @@ import org.slf4j.LoggerFactory;
  */
 public final class ResponseConverter {
   private static final Logger logger = LoggerFactory.getLogger(ResponseConverter.class);
+  private static final ImmutableSet<TaskState> PENDING_STATES =
+      ImmutableSet.of(TaskState.WORKING, TaskState.SUBMITTED);
 
   private ResponseConverter() {}
+
 
   /**
    * Converts a {@link SendMessageResponse} containing a {@link Message} result into ADK events.
@@ -36,13 +51,13 @@ public final class ResponseConverter {
       SendMessageResponse response, String invocationId, String branch) {
     if (response == null) {
       logger.warn("SendMessageResponse was null; returning no events.");
-      return List.of();
+      return ImmutableList.of();
     }
 
     EventKind result = response.getResult();
     if (result == null) {
       logger.warn("SendMessageResponse result was null for invocation {}", invocationId);
-      return List.of();
+      return ImmutableList.of();
     }
 
     if (result instanceof Message message) {
@@ -53,7 +68,47 @@ public final class ResponseConverter {
         "Unsupported SendMessageResponse result type {} for invocation {}; expected Message",
         result.getClass().getSimpleName(),
         invocationId);
-    return List.of();
+    return ImmutableList.of();
+  }
+
+  /** Converts an A2A message back to ADK events. */
+  public static List<Event> messageToEvents(Message message, String invocationId, String branch) {
+    List<Event> events = new ArrayList<>();
+    if (message == null || message.getParts() == null) {
+      return events;
+    }
+
+    for (io.a2a.spec.Part<?> part : message.getParts()) {
+      PartConverter.toGenaiPart(part)
+          .ifPresent(
+              genaiPart ->
+                  events.add(
+                      Event.builder()
+                          .id(UUID.randomUUID().toString())
+                          .invocationId(invocationId)
+                          .author(message.getRole() == Message.Role.AGENT ? "agent" : "user")
+                          .branch(branch)
+                          .content(
+                              Content.builder()
+                                  .role(message.getRole() == Message.Role.AGENT ? "model" : "user")
+                                  .parts(ImmutableList.of(genaiPart))
+                                  .build())
+                          .timestamp(Instant.now().toEpochMilli())
+                          .build()));
+    }
+    return events;
+  }
+
+  private static Message emptyAgentMessage(String contextId) {
+    Message.Builder builder =
+        new Message.Builder()
+            .messageId(UUID.randomUUID().toString())
+            .role(Message.Role.AGENT)
+            .parts(ImmutableList.of(new TextPart("")));
+    if (contextId != null) {
+      builder.contextId(contextId);
+    }
+    return builder.build();
   }
 
   /** Converts a list of ADK events into a single aggregated A2A message. */
@@ -71,7 +126,7 @@ public final class ResponseConverter {
       parts.addAll(eventParts(event));
     }
 
-    Builder builder =
+    Message.Builder builder =
         new Message.Builder()
             .messageId(taskId != null ? taskId : UUID.randomUUID().toString())
             .role(Message.Role.AGENT)
@@ -86,7 +141,7 @@ public final class ResponseConverter {
   public static Message eventToMessage(Event event, String contextId) {
     List<io.a2a.spec.Part<?>> parts = eventParts(event);
 
-    Builder builder =
+    Message.Builder builder =
         new Message.Builder()
             .messageId(event.id() != null ? event.id() : UUID.randomUUID().toString())
             .role(event.author().equalsIgnoreCase("user") ? Message.Role.USER : Message.Role.AGENT)
@@ -97,37 +152,112 @@ public final class ResponseConverter {
     return builder.build();
   }
 
+  public static boolean isCompleted(ClientEvent event) {
+    TaskState executionState = TaskState.UNKNOWN;
+    if (event instanceof TaskEvent taskEvent) {
+      executionState = taskEvent.getTask().getStatus().state();
+    } else if (event instanceof TaskUpdateEvent updateEvent) {
+      executionState = updateEvent.getTask().getStatus().state();
+    }
+    return executionState.equals(TaskState.COMPLETED);
+  }
+
+  public static @Nullable Event clientEventToEvent(
+      ClientEvent event, InvocationContext invocationContext) {
+    if (event instanceof MessageEvent messageEvent) {
+      return messageToEvent(messageEvent.getMessage(), invocationContext);
+    } else if (event instanceof TaskEvent taskEvent) {
+      return taskToEvent(taskEvent.getTask(), invocationContext);
+    } else if (event instanceof TaskUpdateEvent updateEvent) {
+      return handleTaskUpdate(updateEvent, invocationContext);
+    }
+    throw new IllegalArgumentException("Unsupported ClientEvent type: " + event.getClass());
+  }
+
+  private static @Nullable Event handleTaskUpdate(
+      TaskUpdateEvent event, InvocationContext context) {
+    var updateEvent = event.getUpdateEvent();
+
+    if (updateEvent instanceof TaskArtifactUpdateEvent artifactEvent) {
+      if (Objects.equals(artifactEvent.isAppend(), false)
+          || Objects.equals(artifactEvent.isLastChunk(), true)) {
+        return taskToEvent(event.getTask(), context);
+      }
+    }
+    if (updateEvent instanceof TaskStatusUpdateEvent statusEvent) {
+      var status = statusEvent.getStatus();
+      if (status != null && status.message() != null) {
+        return messageToEvent(
+            statusEvent.getStatus().message(),
+            context,
+            PENDING_STATES.contains(event.getTask().getStatus().state()));
+      }
+      return null;
+    }
+    throw new IllegalArgumentException(
+        "Unsupported TaskUpdateEvent type: " + updateEvent.getClass());
+  }
+
+  public static Event finalTaskToEvent(
+      TaskStatusUpdateEvent event, InvocationContext invocationContext) {
+    Message eventMessage = event.getStatus().message();
+    Event.Builder eventBuilder = remoteAgentEventBuilder(invocationContext);
+
+    if (eventMessage != null) {
+      eventBuilder.content(fromModelParts(PartConverter.toGenaiParts(eventMessage.getParts())));
+    }
+    return eventBuilder.turnComplete(true).build();
+  }
+
   /** Converts an A2A message back to ADK events. */
-  public static List<Event> messageToEvents(Message message, String invocationId, String branch) {
-    List<Event> events = new ArrayList<>();
+  public static Event messageToEvent(Message message, InvocationContext invocationContext) {
     if (message == null || message.getParts() == null) {
-      events.add(emptyUserEvent(invocationId, branch));
-      return events;
+      logger.warn("Null message received, creating empty user event");
+      return emptyEvent(invocationContext);
+    }
+    List<com.google.genai.types.Part> genaiParts = PartConverter.toGenaiParts(message.getParts());
+
+    return remoteAgentEventBuilder(invocationContext).content(fromModelParts(genaiParts)).build();
+  }
+
+  /** Converts an A2A message back to ADK events, replacing thoughts with pending markers. */
+  public static Event messageToEvent(
+      Message message, InvocationContext invocationContext, boolean isPending) {
+    if (message == null || message.getParts() == null) {
+      logger.warn("Null message received, creating empty user event");
+      return emptyEvent(invocationContext);
+    }
+    List<com.google.genai.types.Part> genaiParts = PartConverter.toGenaiParts(message.getParts());
+    if (isPending) {
+      genaiParts.replaceAll(part -> part.toBuilder().thought(true).build());
     }
 
-    for (io.a2a.spec.Part<?> part : message.getParts()) {
-      PartConverter.toGenaiPart(part)
-          .ifPresent(
-              genaiPart ->
-                  events.add(
-                      Event.builder()
-                          .id(UUID.randomUUID().toString())
-                          .invocationId(invocationId)
-                          .author(message.getRole() == Message.Role.AGENT ? "agent" : "user")
-                          .branch(branch)
-                          .content(
-                              Content.builder()
-                                  .role(message.getRole() == Message.Role.AGENT ? "model" : "user")
-                                  .parts(List.of(genaiPart))
-                                  .build())
-                          .timestamp(Instant.now().toEpochMilli())
-                          .build()));
+    return remoteAgentEventBuilder(invocationContext).content(fromModelParts(genaiParts)).build();
+  }
+
+  public static Event taskToEvent(Task task, InvocationContext invocationContext) {
+    if (task == null) {
+      return emptyEvent(invocationContext);
+    }
+    Message taskMessage = null;
+
+    if (task.getArtifacts() != null && !task.getArtifacts().isEmpty()) {
+      taskMessage =
+          new Message.Builder()
+              .messageId("")
+              .role(Message.Role.AGENT)
+              .parts(Iterables.getLast(task.getArtifacts()).parts())
+              .build();
+    } else if (task.getStatus() != null && task.getStatus().message() != null) {
+      taskMessage = task.getStatus().message();
+    } else if (task.getHistory() != null && !task.getHistory().isEmpty()) {
+      taskMessage = Iterables.getLast(task.getHistory());
     }
 
-    if (events.isEmpty()) {
-      events.add(emptyUserEvent(invocationId, branch));
+    if (taskMessage != null) {
+      return messageToEvent(taskMessage, invocationContext);
     }
-    return events;
+    return emptyEvent(invocationContext);
   }
 
   private static List<io.a2a.spec.Part<?>> eventParts(Event event) {
@@ -143,34 +273,29 @@ public final class ResponseConverter {
     return parts;
   }
 
-  private static Message emptyAgentMessage(String contextId) {
-    Builder builder =
-        new Message.Builder()
-            .messageId(UUID.randomUUID().toString())
-            .role(Message.Role.AGENT)
-            .parts(List.of(new io.a2a.spec.TextPart("")));
-    if (contextId != null) {
-      builder.contextId(contextId);
-    }
-    return builder.build();
-  }
-
-  private static Event emptyUserEvent(String invocationId, String branch) {
+  private static Event emptyEvent(InvocationContext invocationContext) {
     Event.Builder builder =
         Event.builder()
             .id(UUID.randomUUID().toString())
-            .invocationId(invocationId)
-            .author("user")
-            .content(
-                Content.builder()
-                    .role("user")
-                    .parts(List.of(com.google.genai.types.Part.builder().text("").build()))
-                    .build())
+            .invocationId(invocationContext.invocationId())
+            .author(invocationContext.agent().name())
+            .branch(invocationContext.branch().orElse(null))
+            .content(Content.builder().role("user").parts(ImmutableList.of()).build())
             .timestamp(Instant.now().toEpochMilli());
-    if (branch != null) {
-      builder.branch(branch);
-    }
     return builder.build();
+  }
+
+  private static Content fromModelParts(List<com.google.genai.types.Part> parts) {
+    return Content.builder().role("model").parts(parts).build();
+  }
+
+  private static Event.Builder remoteAgentEventBuilder(InvocationContext invocationContext) {
+    return Event.builder()
+        .id(UUID.randomUUID().toString())
+        .invocationId(invocationContext.invocationId())
+        .author(invocationContext.agent().name())
+        .branch(invocationContext.branch().orElse(null))
+        .timestamp(Instant.now().toEpochMilli());
   }
 
   /** Simple REST-friendly wrapper to carry either a message result or a task result. */
